# syndirella

./: .gitignore  .readthedocs.yaml  KFKUHRDIQZWKPK-UHFFFAOYSA-N_Sp2-sp2_Suzuki_coupling_products_1of1_no_non_mcs_match_placements.csv  LICENSE  Makefile  README.md  RXN_SMARTS_CONSTANTS.json  config.py  config_filter.py  constants.py  embed.py  energy_filter.py  engine.py  environment.yml  findNeighbours.py  fragmenstein_batch.py  fragmenstein_batch_A71EV2A.py  fragmenstein_place.py  graveyard.py  hippo_format_job.sh  job.sh  library.pkl  main_v1.py  main_v2.py  placement_iris.csv  plip_ifp_score.py  pyproject.toml  reaction.pkl  reactionSmarts.py  requirements.txt  scorer.py  setup.py  test.py  test_place_job.sh  wholeMoleculePipeline.py
D68EV3CPROA/: 0_data_clean.ipynb  0_rxn_dists.ipynb  1_find_routes.ipynb  RXN_SMARTS_CONSTANTS.json
NCS1/: D2R_green_21Aug.csv  FINAL_ORDERED_BBS_002057.json  New-Proposed-compounds-20August23-Dani.xlsx  cb1r_green_21Aug.csv  d2r_priority.ipynb  final_ordered_bbs.ipynb  look_at_elaborations.ipynb  ric8enhance_green_21Aug.csv  ric8inhib_green_21Aug.csv
_ric8en-7/: NCS1_combined.sdf  base.minimised.mol
aizynth/: AiZynthManager.py  aizynth_README.md
d2r-12/: Amidation_7548_test.csv  base.minimised.mol
databaseSearch/: __init__.py  databaseSearch.py  datatabaseSearch_chembl.py  datatabaseSearch_postera.py
docs/: requirements.txt
example/: syndirella_input_example_automatic.csv
examples/: check_new_rxn_smirks_3March2025.ipynb  run_examples.ipynb
exps/: run_job.py  run_pipeline.sh
hpc/: job_list.txt  prep_csvs_jobs.ipynb  run_jobs.sh  template.sh
jobs/: cleanup_script.sh  hippo_format_1-1.sh  hippo_format_1-2.sh  hippo_format_1-3.sh  hippo_format_1-4.sh  hippo_format_2-1.sh  hippo_format_batch_1.sh  hippo_format_batch_10.sh  hippo_format_batch_11.sh  hippo_format_batch_12.sh  hippo_format_batch_13.sh  hippo_format_batch_14.sh  hippo_format_batch_2.sh  hippo_format_batch_4.sh  hippo_format_batch_5.sh  hippo_format_batch_6.sh  hippo_format_batch_7.sh  hippo_format_batch_8.sh  hippo_format_batch_9.sh  hippo_format_test.sh  mv_dirs.sh  rdkit_frag_batch_1.sh  rdkit_frag_batch_10.sh  rdkit_frag_batch_11.sh  rdkit_frag_batch_12.sh  rdkit_frag_batch_13.sh  rdkit_frag_batch_14.sh  rdkit_frag_batch_2.sh  rdkit_frag_batch_3.sh  rdkit_frag_batch_4.sh  rdkit_frag_batch_5.sh  rdkit_frag_batch_6.sh  rdkit_frag_batch_7.sh  rdkit_frag_batch_8.sh  rdkit_frag_batch_9.sh  run_job.py  run_pipeline.sh  syndirella_input.csv  test_place_job.sh
nbs/: HIPPO_combined_A71EV2A.ipynb  clusters.csv  combined_w_fragmenstein_data.csv  embedding.ipynb  figures.ipynb  fragmenstein_placement_try.ipynb  full_pipeline.ipynb  full_pipeline_enaminebb.ipynb  how_many_placements.ipynb  looking_at_labeled_expansions.ipynb  pipeline_example.ipynb  placement_pipeline.ipynb  run_fragmenstein_CLI.ipynb  rxn_smarts_blopig.ipynb  test_SMARTS.ipynb  test_dundee.ipynb  test_fairy_filters.ipynb  test_filtering.ipynb  test_kcluster.ipynb  test_label_exit_points.ipynb  value_counts.csv
syndirella/: Arthor.py  Cobbler.py  DatabaseSearch.py  Fairy.py  PipelineOutput.py  Postera.py  SMARTSHandler.py  __init__.py  __main__.py  _cli_defaults.py  check_inputs.py  cli.py  cli_defaults.py  config.py  constants.py  error.py  fairy.py  justretroquery.py  pipeline.py  smarts.py  structure_outputs.py  syndirella_input_template.csv  syndirella_input_template_manual.csv  syndirella_manual_input_template.csv  version.py
tests/: adding_output_numbers.ipynb  adding_smarts.ipynb  adding_smarts2.ipynb  adding_smarts_clean.ipynb  find_cutoff_to_place.ipynb  moving_metadata.ipynb  testSmarts.py  test_smarts.ipynb  test_substructure.ipynb
utils/: format_to_hippo.py  format_to_hippo_v2.py  (+3 more)
(+361 files in other folders)
