[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "syndirella"
version = "2.1.7-alpha"
authors = [
    { name = "Kate Fieseler", email = "kate.fieseler@stats.ox.ac.uk" },
]
description = "Synthetically Driven Elaborations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdkit",
    "jupyter",
    "numpy<2",
    "glob2",
    "requests",
    "pillow",
    "fragmenstein>=1.0.7",
    "shortuuid",
    "pandas",
    "biopython"
]
[project.urls]
"Documentation" = "https://syndirella.readthedocs.io/en/latest/"
"Source" = "https://github.com/kate-fie/syndirella"
"Bug Tracker" = "https://github.com/kate-fie/syndirella/issues"
[project.scripts]
syndirella = "syndirella.cli:main"
