[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["syndirella"]
include-package-data = true

[tool.setuptools.package-data]
syndirella = [
    "constants/*.json*"
]

[project]
name = "syndirella"
version = "5.0.5-alpha"
authors = [
    { name = "Kate Fieseler", email = "kate.k.fieseler@gmail.com" },
]
description = "Synthetically Driven Elaborations"
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdkit",
    "jupyter",
    "numpy<2",
    "glob2",
    "requests",
    "pillow",
    "fragmenstein>=1.0.7",
    "shortuuid",
    "pandas",
    "biopython",
    "aizynthfinder",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pyyaml",
    "openpyxl",
    "xlrd",
]
[project.urls]
"Documentation" = "https://syndirella.readthedocs.io/en/latest/"
"Source" = "https://github.com/kate-fie/syndirella"
"Bug Tracker" = "https://github.com/kate-fie/syndirella/issues"
[project.scripts]
syndirella = "syndirella.cli:main"
